[project]
name = "gsrest"
version = "1.13.4dev3"
description = "GraphSense API REST API"
readme = "README.md"
changelog = "CHANGELOG.md"
licence = "LICENSE"
keywords = ["OpenAPI", "GraphSense API"]
requires-python = ">=3.10"
url = 'https://github.com/graphsense/graphsense-REST/'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp-cors>=0.7.0",
    "aiohttp-jinja2>=1.5.0",
    "async-lru>=2.0.4",
    "cassandra-driver>=3.27.0",
    "connexion[swagger-ui]>=2.6.0<3",
    "graphsense-lib[conversions]>=2.6.0",
    "lz4>=4.3.2",
    "openapi-schema-validator>=0.2.3",
    "python-dateutil>=2.9.0",
    "swagger-ui-bundle>=0.0.9",
    "tagpack-tool>=25.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "regression: mark test as regression test",
]
addopts = "-m 'not regression'"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "openapi_server",
    "tests/test_*.py",
    "setup.py"
]

[tool.ruff.lint]
extend-select = ["T201"]

[tool.uv.sources]
graphsense-lib = { git = "https://github.com/graphsense/graphsense-lib", rev = "v2.6.1rc10" }

[dependency-groups]
dev = [
    "aiohttp-devtools>=1.1.2",
    "gunicorn>=23.0.0",
    "pre-commit>=4.0.1",
    "pytest-aiohttp>=1.0.5",
    "pytest-cov>=6.0.0",
    "pytest-icdiff>=0.9",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
    "testcontainers[cassandra,postgres]>=4.8.2",
    "graphsense-python>=1.9.4",
    "tqdm>=4.67.1",
]
