[project]
name = "gsrest"
version = "1.15.0-rc5"
description = "GraphSense API REST API"
readme = "README.md"
keywords = ["OpenAPI", "GraphSense API"]
requires-python = ">=3.10"
license-files = ["LICENSE"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp-cors>=0.7.0",
    "aiohttp-jinja2>=1.5.0",
    "async-lru>=2.0.4",
    "connexion[swagger-ui] >=2.6.0, <3",
    "graphsense-lib[conversions,tagpacks]>=2.7.6",
    "openapi-schema-validator>=0.2.3",
    "python-dateutil>=2.9.0",
    "swagger-ui-bundle>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/graphsense/graphsense-REST/"
Repository = "https://github.com/graphsense/graphsense-REST/"
Changelog = "https://github.com/graphsense/graphsense-REST/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gsrest*", "openapi_server*"]
exclude = ["clients*", "tests*", "scripts*", "gsrest.test", "gsrest.test.*"]

[tool.setuptools]
include-package-data = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "regression: mark test as regression test",
]
addopts = "-m 'not regression'"
testpaths = [
    "tests",
    "gsrest",
]
norecursedirs = [
    "clients",
    "build",
    "dist",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "openapi_server*",
    "openapi_server/**",
    "tests/test_*.py",
    "setup.py",
    "clients/**"
]

[tool.ruff.lint]
extend-select = ["T201"]

[tool.uv.sources]
graphsense-lib = { git = "https://github.com/graphsense/graphsense-lib", rev = "v2.8.0-rc9" }

[dependency-groups]
dev = [
    "aiohttp-devtools>=1.1.2",
    "gunicorn>=23.0.0",
    "pre-commit>=4.0.1",
    "pytest-aiohttp>=1.0.5",
    "pytest-cov>=6.0.0",
    "pytest-icdiff>=0.9",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
    "testcontainers[cassandra,postgres]>=4.8.2",
    "graphsense-python>=1.9.4",
    "tqdm>=4.67.1",
]
